Fix undesired flickering in edge of menu

--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ div {
     display: flex;
     padding-right: 10px;
     font-size: 1em;
-    /* -webkit-backface-visibility: hidden;
-    -webkit-transform-style: preserve-3d; */
+    -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
     /* padding: 10px; */
 }
 .menu:hover {
